--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -1,6 +1,7 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # For window rules and layerrules
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# --- Workspaces configuration by Xuan Truong ---
 
 # NOTES: This is only for Hyprland > 0.48
 
@@ -113,8 +114,8 @@ windowrule = move 72% 7%,title:^(Picture-in-Picture)$
 windowrule = idleinhibit fullscreen, fullscreen:1
 
 # windowrule move to workspace
-windowrule = workspace 1, tag:email*
-windowrule = workspace 2, tag:browser*
+windowrule = workspace 1, tag:browser*
+windowrule = workspace 2, tag:email*
 #windowrule = workspace 3, class:^([Tt]hunar)$
 #windowrule = workspace 3, tag:projects*
 windowrule = workspace 5, tag:gamestore*
@@ -224,4 +225,3 @@ layerrule = ignorealpha 0.5, quickshell:overview
 
 #layerrule = ignorezero, overview
 #layerrule = blur, overview
-
