--- a/hypr/configs/Keybinds.conf
+++ b/hypr/configs/Keybinds.conf
@@ -57,14 +57,14 @@ bindl = , xf86AudioPrev, exec, $scriptsDir/MediaCtrl.sh --prv
 bindl = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop
 
 # Screenshot keybindings NOTE: You may need to press Fn key as well
-bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --now  # screenshot
+bind = $mainMod CTRL, S, exec, $scriptsDir/ScreenShot.sh --now  # screenshot
 #bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area # screenshot (area)
 bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 # screenshot  (5 secs delay)
 bind = $mainMod CTRL SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --in10 # screenshot (10 secs delay)
 bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active # screenshot (active window only)
 
 # screenshot with swappy (another screenshot tool)
-bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --area #screenshot (swappy)
+bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --area #screenshot
 
 # Resize windows
 binde = $mainMod SHIFT, left, resizeactive,-50 0
@@ -151,4 +151,3 @@ bind = $mainMod, comma, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow # NOTE: mouse:272 = left click
 bindm = $mainMod, mouse:273, resizewindow # NOTE: mouse:272 = right click
-
