--- a/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/UserConfigs/Startup_Apps.conf
@@ -1,5 +1,6 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # Commands and Apps to be executed at launch
+# --- Workspaces configuration by Xuan Truong ---
 
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
@@ -7,11 +8,11 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 $wallDIR=$HOME/Pictures/wallpapers
 $lock = $scriptsDir/LockScreen.sh
 $SwwwRandom = $UserScripts/WallpaperAutoChange.sh
-$livewallpaper=""
+$livewallpaper="$HOME/Pictures/wallpapers/Jinx-Arcane-1080p.mp4"
 
 # wallpaper stuff 
-exec-once = swww-daemon --format xrgb
-#exec-once = mpvpaper '*' -o "load-scripts=no no-audio --loop" $livewallpaper
+exec-once = swww-daemon --format xrgb # hình nền thường thì cmt line 47
+exec-once = mpvpaper '*' -o "load-scripts=no no-audio --loop" $livewallpaper
 
 # wallpaper random
 #exec-once = $SwwwRandom $wallDIR # random wallpaper switcher every 30 minutes
@@ -32,9 +33,9 @@ exec-once = blueman-applet
 exec-once = waybar
 exec-once = qs # quickshell AGS Desktop Overview alternative
 
-#clipboard manager
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
+# clipboard manager
+exec-once = CLIPHIST_MAX_ITEMS=5000 wl-paste --type text --watch cliphist store
+exec-once = CLIPHIST_MAX_ITEMS=100 wl-paste --type image --watch cliphist store
 
 # Rainbow borders
 #exec-once = $UserScripts/RainbowBorders.sh
@@ -44,7 +45,7 @@ exec-once = hypridle
 
 
 # Here are list of features available but disabled by default
-# exec-once = swww-daemon --format xrgb && swww img $HOME/Pictures/wallpapers/mecha-nostalgia.png  # persistent wallpaper
+#exec-once = swww-daemon --format xrgb && swww img $HOME/Pictures/wallpapers/MangaWallpaperGIF.gif  # persistent wallpaper
 
 #gnome polkit for nixos
 #exec-once = $scriptsDir/Polkit-NixOS.sh
