--- a/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/UserConfigs/UserKeybinds.conf
@@ -6,72 +6,70 @@
 # See also Laptops.conf for laptops keybinds 
 
 # /* ---- ✴️ Variables ✴️ ---- */  #
-$mainMod = SUPER
-$scriptsDir = $HOME/.config/hypr/scripts
-$UserScripts = $HOME/.config/hypr/UserScripts
-$UserConfigs = $HOME/.config/hypr/UserConfigs
+$mainMod = SUPER # Phím chính (phím Windows/Command)
+$scriptsDir = $HOME/.config/hypr/scripts # Thư mục chứa scripts
+$UserScripts = $HOME/.config/hypr/UserScripts # Thư mục scripts người dùng
+$UserConfigs = $HOME/.config/hypr/UserConfigs # Thư mục cấu hình người dùng
 
-# settings for User defaults apps - set your default terminal and file manager on this file
+# Cài đặt cho ứng dụng mặc định của người dùng - đặt terminal và file manager mặc định trong file này
 source= $UserConfigs/01-UserDefaults.conf
 
-# common shortcuts
-#bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window # Super Key to Launch rofi menu
-bind = $mainMod, D, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window # Main Menu (APP Launcher)
-bind = $mainMod, B, exec, xdg-open "https://"  # default browser
-#bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview' # desktop overview (if installed)
-bind = $mainMod, A, global, quickshell:overviewToggle # desktop overview (if installed)
-bind = $mainMod, Return, exec, $term  #terminal
-bind = $mainMod, E, exec, $files #file manager
+# Phím tắt phổ biến (Common shortcuts)
+#bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window # Phím Super để mở menu rofi
+bind = $mainMod, D, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window # Menu chính (Trình khởi chạy ứng dụng)
+bind = $mainMod, B, exec, xdg-open "https://" # Trình duyệt mặc định
+#bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview' # Tổng quan desktop (nếu đã cài)
+bind = $mainMod, A, global, quickshell:overviewToggle # Tổng quan desktop (nếu đã cài quickshell)
+bind = $mainMod, Return, exec, $term # Mở terminal
+bind = $mainMod, E, exec, $files # Mở file manager
 
+# TÍNH NĂNG / BỔ SUNG (FEATURES / EXTRAS)
+bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # Trợ giúp / Bảng gợi ý phím tắt
+bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Làm mới waybar, swaync, rofi
+bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # Menu emoji
+bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Tìm kiếm Google bằng rofi
+bind = $mainMod ALT, O, exec, $scriptsDir/ChangeBlur.sh # Bật/tắt hiệu ứng làm mờ
+bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # Bật/tắt animations (chế độ game)
+bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Chuyển đổi Layout Master hoặc Dwindle
+bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Quản lý clipboard
+bind = $mainMod CTRL, R, exec, $scriptsDir/RofiThemeSelector.sh # Menu chọn theme Rofi của KooL
+bind = $mainMod CTRL SHIFT, R, exec, pkill rofi || true && $scriptsDir/RofiThemeSelector-modified.sh # Menu chọn theme Rofi đã chỉnh sửa
 
-# FEATURES / EXTRAS
-bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # help / cheat sheet
-bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Refresh waybar, swaync, rofi
-bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # emoji menu
-bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Google search using rofi
-bind = $mainMod ALT, O, exec, $scriptsDir/ChangeBlur.sh # Toggle blur settings 
-bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # Toggle animations ON/OFF
-bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
-bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
-bind = $mainMod CTRL, R, exec, $scriptsDir/RofiThemeSelector.sh # KooL Rofi Menu Theme Selector
-bind = $mainMod CTRL SHIFT, R, exec, pkill rofi || true && $scriptsDir/RofiThemeSelector-modified.sh # modified Rofi Theme Selector
+bind = $mainMod SHIFT, F, fullscreen # Toàn màn hình thực sự
+bind = $mainMod CTRL, F, fullscreen, 1 # Toàn màn hình giả
+bind = $mainMod, SPACE, togglefloating, # Chế độ cửa sổ nổi (Float Mode)
+bind = $mainMod ALT, SPACE, exec, hyprctl dispatch workspaceopt allfloat # Chế độ tất cả cửa sổ nổi
+bind = $mainMod SHIFT, Return, exec, $scriptsDir/Dropterminal.sh $term # Terminal thả xuống (Dropdown)
 
-bind = $mainMod SHIFT, F, fullscreen # whole full screen
-bind = $mainMod CTRL, F, fullscreen, 1 # fake full screen
-bind = $mainMod, SPACE, togglefloating, #Float Mode
-bind = $mainMod ALT, SPACE, exec, hyprctl dispatch workspaceopt allfloat #All Float Mode
-bind = $mainMod SHIFT, Return, exec, $scriptsDir/Dropterminal.sh $term # Dropdown terminal
+# Phóng to desktop hoặc kính lúp (Desktop zooming or magnifier)
+bind = $mainMod ALT, mouse_down, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor * 2.0}')" # Phóng to con trỏ
+bind = $mainMod ALT, mouse_up, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor / 2.0}')" # Thu nhỏ con trỏ
 
-# Desktop zooming or magnifier
-bind = $mainMod ALT, mouse_down, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor * 2.0}')"
-bind = $mainMod ALT, mouse_up, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor / 2.0}')" 
-
-## NOTES for ja (Hyprland version 0.39 (Ubuntu 24.04))
+## GHI CHÚ cho ja (Hyprland phiên bản 0.39 (Ubuntu 24.04))
 #bind = $mainMod ALT, mouse_down, exec, hyprctl keyword misc:cursor_zoom_factor "$(hyprctl getoption misc:cursor_zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor * 2.0}')"
 #bind = $mainMod ALT, mouse_up, exec, hyprctl keyword misc:cursor_zoom_factor "$(hyprctl getoption misc:cursor_zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor / 2.0}')" 
 
-# Waybar / Bar related
-bind = $mainMod CTRL ALT, B, exec, pkill -SIGUSR1 waybar # Toggle hide/show waybar 
-bind = $mainMod CTRL, B, exec, $scriptsDir/WaybarStyles.sh # Waybar Styles Menu
-bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Waybar Layout Menu
+# Waybar / Thanh trạng thái liên quan
+bind = $mainMod CTRL ALT, B, exec, pkill -SIGUSR1 waybar # Bật/tắt ẩn/hiện waybar
+bind = $mainMod CTRL, B, exec, $scriptsDir/WaybarStyles.sh # Menu chọn style Waybar
+bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Menu chọn layout Waybar
 
-# FEATURES / EXTRAS (UserScripts)
-bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music using rofi
-bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
-bind = $mainMod SHIFT, W, exec, $UserScripts/WallpaperEffects.sh # Wallpaper Effects by imagemagick
-bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
-bind = $mainMod CTRL, O, exec, hyprctl setprop active opaque toggle # disable opacity on active window
-bind = $mainMod SHIFT, K, exec, $scriptsDir/KeyBinds.sh # search keybinds via rofi
-bind = $mainMod SHIFT, A, exec, $scriptsDir/Animations.sh #hyprland animations menu
-bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zsh theme
-bindln = ALT_L, SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Change keyboard layout globally
-bindln = SHIFT_L, ALT_L, exec, $scriptsDir/Tak0-Per-Window-Switch.sh # Change keyboard layout locally for each window
-bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
+# TÍNH NĂNG / BỔ SUNG (UserScripts)
+bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # Nghe nhạc online bằng rofi
+bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Chọn hình nền để áp dụng
+bind = $mainMod SHIFT, W, exec, $UserScripts/WallpaperEffects.sh # Hiệu ứng hình nền bằng imagemagick
+bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Hình nền ngẫu nhiên
+bind = $mainMod CTRL, O, exec, hyprctl setprop active opaque toggle # Tắt/bật độ trong suốt trên cửa sổ đang hoạt động
+bind = $mainMod SHIFT, K, exec, $scriptsDir/KeyBinds.sh # Tìm kiếm phím tắt qua rofi
+bind = $mainMod SHIFT, A, exec, $scriptsDir/Animations.sh # Menu animations của hyprland
+bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Thay đổi theme oh-my-zsh
+bindln = ALT_L, SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Thay đổi bố cục bàn phím toàn cục
+bindln = SHIFT_L, ALT_L, exec, $scriptsDir/Tak0-Per-Window-Switch.sh # Thay đổi bố cục bàn phím riêng cho từng cửa sổ
+bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # Máy tính (qalculate)
 
-
-# For passthrough keyboard into a VM
-# bind = $mainMod ALT, P, submap, passthru
+# Để passthrough bàn phím vào VM (For passthrough keyboard into a VM)
+# bind = $mainMod ALT, P, submap, passthru # Bật chế độ passthru
 #submap = passthru
-# to unbind
-#bind = $mainMod ALT, P, submap, reset
+# để unbind
+#bind = $mainMod ALT, P, submap, reset # Tắt chế độ passthru
 #submap = reset
