--- a/hypr/UserConfigs/Laptops.conf
+++ b/hypr/UserConfigs/Laptops.conf
@@ -3,53 +3,53 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more variable settings
 # These configs are mostly for laptops. This is addemdum to Keybinds.conf
 
-$mainMod = SUPER
-$scriptsDir = $HOME/.config/hypr/scripts
-$UserConfigs = $HOME/.config/hypr/UserConfigs
+$mainMod = SUPER # Phím chính (phím Windows/Command)
+$scriptsDir = $HOME/.config/hypr/scripts # Thư mục chứa scripts
+$UserConfigs = $HOME/.config/hypr/UserConfigs # Thư mục cấu hình người dùng
 
-# for disabling Touchpad. hyprctl devices to get device name. 
+# Để tắt Touchpad. Dùng lệnh 'hyprctl devices' để lấy tên thiết bị
 $Touchpad_Device=asue1209:00-04f3:319f-touchpad
 
-binde = , xf86KbdBrightnessDown, exec, $scriptsDir/BrightnessKbd.sh --dec # decrease keyboard brightness
-binde = , xf86KbdBrightnessUp, exec, $scriptsDir/BrightnessKbd.sh --inc # increase keyboard brightness
-bind = , xf86Launch1, exec, rog-control-center # ASUS Armory crate button
-bind = , xf86Launch3, exec, asusctl led-mode -n # FN+F4 Switch keyboard RGB profile 
-bind = , xf86Launch4, exec, asusctl profile -n  # FN+F5 change of fan profiles (Quite, Balance, Performance)
-binde = , xf86MonBrightnessDown, exec, $scriptsDir/Brightness.sh --dec # decrease monitor brightness
-binde = , xf86MonBrightnessUp, exec, $scriptsDir/Brightness.sh --inc # increase monitor brightness
-bind = , xf86TouchpadToggle, exec, $scriptsDir/TouchPad.sh # disable touchpad
+binde = , xf86KbdBrightnessDown, exec, $scriptsDir/BrightnessKbd.sh --dec # Giảm độ sáng bàn phím
+binde = , xf86KbdBrightnessUp, exec, $scriptsDir/BrightnessKbd.sh --inc # Tăng độ sáng bàn phím
+bind = , xf86Launch1, exec, rog-control-center # Nút ASUS Armory crate
+bind = , xf86Launch3, exec, asusctl led-mode -n # FN+F4 Chuyển chế độ RGB bàn phím
+bind = , xf86Launch4, exec, asusctl profile -n # FN+F5 Thay đổi chế độ quạt (Yên tĩnh, Cân bằng, Hiệu suất)
+binde = , xf86MonBrightnessDown, exec, $scriptsDir/Brightness.sh --dec # Giảm độ sáng màn hình
+binde = , xf86MonBrightnessUp, exec, $scriptsDir/Brightness.sh --inc # Tăng độ sáng màn hình
+bind = , xf86TouchpadToggle, exec, $scriptsDir/TouchPad.sh # Tắt/bật touchpad
 
-# Screenshot keybindings using F6 (no PrinSrc button)
-bind = $mainMod, F6, exec, $scriptsDir/ScreenShot.sh --now # screenshot
-bind = $mainMod SHIFT, F6, exec, $scriptsDir/ScreenShot.sh --area # screenshot (area)
-bind = $mainMod CTRL, F6, exec, $scriptsDir/ScreenShot.sh --in5 # # screenshot (5 secs delay)
-bind = $mainMod ALT, F6, exec, $scriptsDir/ScreenShot.sh --in10 # screenshot (10 secs delay)
-bind = ALT, F6, exec, $scriptsDir/ScreenShot.sh --active # screenshot (active window only)
+# Phím tắt chụp màn hình bằng F6 (không có nút PrinSrc)
+bind = $mainMod, F6, exec, $scriptsDir/ScreenShot.sh --now # Chụp màn hình ngay
+bind = $mainMod SHIFT, F6, exec, $scriptsDir/ScreenShot.sh --area # Chụp màn hình vùng chọn
+bind = $mainMod CTRL, F6, exec, $scriptsDir/ScreenShot.sh --in5 # Chụp màn hình sau 5 giây
+bind = $mainMod ALT, F6, exec, $scriptsDir/ScreenShot.sh --in10 # Chụp màn hình sau 10 giây
+bind = ALT, F6, exec, $scriptsDir/ScreenShot.sh --active # Chụp màn hình cửa sổ đang hoạt động
 
-$TOUCHPAD_ENABLED = true
+$TOUCHPAD_ENABLED = true # Trạng thái bật touchpad
 device {
-  name = $Touchpad_Device
-  enabled = $TOUCHPAD_ENABLED
+  name = $Touchpad_Device # Tên thiết bị touchpad
+  enabled = $TOUCHPAD_ENABLED # Bật/tắt touchpad
 }
-# Below are useful when you are connecting your laptop in external display
-# Suggest you edit below for your laptop display
-# From WIKI This is to disable laptop monitor when lid is closed.
-# consult https://wiki.hyprland.org/hyprland-wiki/pages/Configuring/Binds/#switches
-#bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, preferred, auto, 1"
-#bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
 
+# Phần dưới hữu ích khi kết nối laptop với màn hình ngoài
+# Đề xuất chỉnh sửa phần dưới cho màn hình laptop của bạn
+# Từ WIKI: Đây là cách tắt màn hình laptop khi đóng nắp
+# Tham khảo https://wiki.hyprland.org/hyprland-wiki/pages/Configuring/Binds/#switches
+#bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, preferred, auto, 1" # Bật màn laptop khi mở nắp
+#bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable" # Tắt màn laptop khi đóng nắp
 
-# WARNING! Using this method has some caveats!! USE THIS PART WITH SOME CAUTION!
-# CONS of doing this, is that you need to set up your wallpaper (SUPER W) and choose wallpaper.
-# CAVEATS! Sometimes the Main Laptop Monitor DOES NOT have display that it needs to re-connect your external monitor
-# One work around is to ensure that before shutting down laptop, MAKE SURE your laptop lid is OPEN!!
-# Make sure to comment (put # on the both the bindl = , switch ......) above
-# NOTE: Display for laptop are being generated into LaptopDisplay.conf
-# This part is to be use if you do not want your main laptop monitor to wake up during say wallpaper change etc
+# CẢNH BÁO! Sử dụng phương pháp này có một số hạn chế!! SỬ DỤNG PHẦN NÀY VỚI THẬN TRỌNG!
+# NHƯỢC ĐIỂM của việc làm này là bạn cần thiết lập lại hình nền (SUPER W) và chọn hình nền.
+# HẠN CHẾ! Đôi khi màn hình laptop chính KHÔNG hiển thị và cần kết nối lại màn hình ngoài
+# Một giải pháp là đảm bảo trước khi tắt laptop, HÃY ĐẢM BẢO nắp laptop đang MỞ!!
+# Đảm bảo comment (đặt dấu # trước cả hai dòng bindl = , switch ......) ở trên
+# LƯU Ý: Cấu hình màn hình laptop được tạo vào file LaptopDisplay.conf
+# Phần này được dùng nếu bạn không muốn màn hình laptop chính bật lên khi thay đổi hình nền, v.v.
 
-#bindl = , switch:off:Lid Switch,exec,echo "monitor = eDP-1, preferred, auto, 1" > $UserConfigs/LaptopDisplay.conf
-#bindl = , switch:on:Lid Switch,exec,echo "monitor = eDP-1, disable" > $UserConfigs/LaptopDisplay.conf
+#bindl = , switch:off:Lid Switch,exec,echo "monitor = eDP-1, preferred, auto, 1" > $UserConfigs/LaptopDisplay.conf # Bật màn laptop khi mở nắp (ghi vào file)
+#bindl = , switch:on:Lid Switch,exec,echo "monitor = eDP-1, disable" > $UserConfigs/LaptopDisplay.conf # Tắt màn laptop khi đóng nắp (ghi vào file)
 
-# for laptop-lid action (to erase the last entry)
-#exec-once = echo "monitor = eDP-1, preferred, auto, 1" > $HOME/.config/hypr/UserConfigs/LaptopDisplay.conf
+# Cho hành động nắp laptop (để xóa entry cuối cùng)
+#exec-once = echo "monitor = eDP-1, preferred, auto, 1" > $HOME/.config/hypr/UserConfigs/LaptopDisplay.conf # Khởi tạo cấu hình màn laptop khi khởi động
 #
