--- a/hypr/configs/Keybinds.conf
+++ b/hypr/configs/Keybinds.conf
@@ -1,153 +1,154 @@
 # /* ---- 💫 https://github.com/xuantruong1612 💫 ---- */  #
 # Default Keybinds
 # visit https://wiki.hyprland.org/Configuring/Binds/ for more info
+# --- Workspaces configuration by Xuan Truong ---
 
 # /* ---- ✴️ Variables ✴️ ---- */  #
-$mainMod = SUPER
-$scriptsDir = $HOME/.config/hypr/scripts
-$UserConfigs = $HOME/.config/hypr/UserConfigs
-$UserScripts = $HOME/.config/hypr/UserScripts
+$mainMod = SUPER # Phím chính (phím Windows/Command)
+$scriptsDir = $HOME/.config/hypr/scripts # Thư mục chứa scripts
+$UserConfigs = $HOME/.config/hypr/UserConfigs # Thư mục cấu hình người dùng
+$UserScripts = $HOME/.config/hypr/UserScripts # Thư mục scripts người dùng
 
-bind = CTRL ALT, Delete, exec, hyprctl dispatch exit 0 # exit Hyprland
-#bind = $mainMod, Q, killactive, # close active (not kill)
-bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
-bind = CTRL ALT, L, exec, $scriptsDir/LockScreen.sh # screen lock
-bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh # power menu
-bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC notification panel
-bind = $mainMod SHIFT, E, exec, $scriptsDir/Kool_Quick_Settings.sh # Settings Menu KooL Hyprland Settings
+bind = CTRL ALT, Delete, exec, hyprctl dispatch exit 0 # thoát Hyprland
+#bind = $mainMod, Q, killactive, # đóng cửa sổ đang hoạt động (không kill)
+bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh # Kill tiến trình đang hoạt động
+bind = CTRL ALT, L, exec, $scriptsDir/LockScreen.sh # khóa màn hình
+bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh # menu nguồn
+bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # bảng thông báo swayNC
+bind = $mainMod SHIFT, E, exec, $scriptsDir/Kool_Quick_Settings.sh # Menu cài đặt KooL Hyprland
 
-bind = $mainMod, Q, exec, ~/.config/hypr/scripts/confirm_quit_terminal.sh
+bind = $mainMod, Q, exec, ~/.config/hypr/scripts/confirm_quit_terminal.sh # Xác nhận thoát terminal
 
-# Master Layout
-bind = $mainMod CTRL, D, layoutmsg, removemaster
-bind = $mainMod, I, layoutmsg, addmaster
-bind = $mainMod, J, layoutmsg, cyclenext
-bind = $mainMod, K, layoutmsg, cycleprev
-bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster
+# Master Layout (Bố cục chính)
+bind = $mainMod CTRL, D, layoutmsg, removemaster # Xóa cửa sổ master
+bind = $mainMod, I, layoutmsg, addmaster # Thêm cửa sổ master
+bind = $mainMod, J, layoutmsg, cyclenext # Chu kỳ sang cửa sổ tiếp theo
+bind = $mainMod, K, layoutmsg, cycleprev # Chu kỳ về cửa sổ trước
+bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster # Hoán đổi với cửa sổ master
 
-# Dwindle Layout
-bind = $mainMod SHIFT, I, togglesplit # only works on dwindle layout
-bind = $mainMod, P, pseudo, # dwindle
+# Dwindle Layout (Bố cục Dwindle)
+bind = $mainMod SHIFT, I, togglesplit # Bật/tắt chia cửa sổ (chỉ hoạt động trên dwindle layout)
+bind = $mainMod, P, pseudo, # Chế độ pseudo (dwindle)
 
-# Works on either layout (Master or Dwindle)
-bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
+# Hoạt động trên cả hai layout (Master hoặc Dwindle)
+bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3 # Đặt tỉ lệ chia cửa sổ 0.3
 
-# group
-bind = $mainMod, G, togglegroup # toggle group
-bind = $mainMod CTRL, tab, changegroupactive  # change focus to another window
+# Nhóm cửa sổ (Window groups)
+bind = $mainMod, G, togglegroup # Bật/tắt nhóm cửa sổ
+bind = $mainMod CTRL, tab, changegroupactive # Chuyển focus sang cửa sổ khác trong nhóm
 
- # Cycle windows if floating bring to top
-bind = ALT, tab, cyclenext
-bind = ALT, tab, bringactivetotop  
+# Chu kỳ cửa sổ, nếu floating thì đưa lên trên cùng
+bind = ALT, tab, cyclenext # Chuyển sang cửa sổ tiếp theo
+bind = ALT, tab, bringactivetotop # Đưa cửa sổ đang hoạt động lên trên cùng
 
-# Special Keys / Hot Keys
-bindel = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc # volume up
-bindel = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec # volume down
-bindl = , xf86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic # mic mute
-bindl = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle # mute
-bindl = , xf86Sleep, exec, systemctl suspend  # sleep button 
-bindl = , xf86Rfkill, exec, $scriptsDir/AirplaneMode.sh # Airplane mode
+# Phím đặc biệt / Phím nóng (Special Keys / Hot Keys)
+bindel = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc # Tăng âm lượng
+bindel = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec # Giảm âm lượng
+bindl = , xf86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic # Tắt/bật tiếng mic
+bindl = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle # Tắt/bật tiếng loa
+bindl = , xf86Sleep, exec, systemctl suspend # Nút ngủ (Sleep)
+bindl = , xf86Rfkill, exec, $scriptsDir/AirplaneMode.sh # Chế độ máy bay (Airplane mode)
 
-# media controls using keyboards
-bindl = , xf86AudioPlayPause, exec, $scriptsDir/MediaCtrl.sh --pause
-bindl = , xf86AudioPause, exec, $scriptsDir/MediaCtrl.sh --pause
-bindl = , xf86AudioPlay, exec, $scriptsDir/MediaCtrl.sh --pause
-bindl = , xf86AudioNext, exec, $scriptsDir/MediaCtrl.sh --nxt 
-bindl = , xf86AudioPrev, exec, $scriptsDir/MediaCtrl.sh --prv
-bindl = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop
+# Điều khiển phương tiện bằng bàn phím (Media controls)
+bindl = , xf86AudioPlayPause, exec, $scriptsDir/MediaCtrl.sh --pause # Phát/Tạm dừng nhạc
+bindl = , xf86AudioPause, exec, $scriptsDir/MediaCtrl.sh --pause # Tạm dừng nhạc
+bindl = , xf86AudioPlay, exec, $scriptsDir/MediaCtrl.sh --pause # Phát nhạc
+bindl = , xf86AudioNext, exec, $scriptsDir/MediaCtrl.sh --nxt # Bài hát tiếp theo
+bindl = , xf86AudioPrev, exec, $scriptsDir/MediaCtrl.sh --prv # Bài hát trước đó
+bindl = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop # Dừng phát nhạc
 
-# Screenshot keybindings NOTE: You may need to press Fn key as well
-bind = $mainMod CTRL, S, exec, $scriptsDir/ScreenShot.sh --now  # screenshot
-#bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area # screenshot (area)
-bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 # screenshot  (5 secs delay)
-bind = $mainMod CTRL SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --in10 # screenshot (10 secs delay)
-bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active # screenshot (active window only)
+# Phím tắt chụp màn hình (Screenshot keybindings) - LƯU Ý: Có thể cần nhấn phím Fn
+bind = $mainMod CTRL, S, exec, $scriptsDir/ScreenShot.sh --now # Chụp màn hình ngay lập tức
+#bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area # Chụp màn hình vùng chọn
+bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 # Chụp màn hình sau 5 giây
+bind = $mainMod CTRL SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --in10 # Chụp màn hình sau 10 giây
+bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active # Chụp màn hình cửa sổ đang hoạt động
 
-# screenshot with swappy (another screenshot tool)
-bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --area #screenshot
+# Chụp màn hình với swappy (công cụ chụp màn hình có chỉnh sửa)
+bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --area # Chụp màn hình vùng chọn 
 
-# Resize windows
-binde = $mainMod SHIFT, left, resizeactive,-50 0
-binde = $mainMod SHIFT, right, resizeactive,50 0
-binde = $mainMod SHIFT, up, resizeactive,0 -50
-binde = $mainMod SHIFT, down, resizeactive,0 50
+# Thay đổi kích thước cửa sổ (Resize windows)
+binde = $mainMod SHIFT, left, resizeactive,-50 0 # Thu nhỏ chiều ngang
+binde = $mainMod SHIFT, right, resizeactive,50 0 # Mở rộng chiều ngang
+binde = $mainMod SHIFT, up, resizeactive,0 -50 # Thu nhỏ chiều dọc
+binde = $mainMod SHIFT, down, resizeactive,0 50 # Mở rộng chiều dọc
 
-# Move windows
-bind = $mainMod CTRL, left, movewindow, l
-bind = $mainMod CTRL, right, movewindow, r
-bind = $mainMod CTRL, up, movewindow, u
-bind = $mainMod CTRL, down, movewindow, d
+# Di chuyển cửa sổ (Move windows)
+bind = $mainMod CTRL, left, movewindow, l # Di chuyển cửa sổ sang trái
+bind = $mainMod CTRL, right, movewindow, r # Di chuyển cửa sổ sang phải
+bind = $mainMod CTRL, up, movewindow, u # Di chuyển cửa sổ lên trên
+bind = $mainMod CTRL, down, movewindow, d # Di chuyển cửa sổ xuống dưới
 
-# Swap windows
-bind = $mainMod ALT, left, swapwindow, l
-bind = $mainMod ALT, right, swapwindow, r
-bind = $mainMod ALT, up, swapwindow, u
-bind = $mainMod ALT, down, swapwindow, d
+# Hoán đổi vị trí cửa sổ (Swap windows)
+bind = $mainMod ALT, left, swapwindow, l # Hoán đổi với cửa sổ bên trái
+bind = $mainMod ALT, right, swapwindow, r # Hoán đổi với cửa sổ bên phải
+bind = $mainMod ALT, up, swapwindow, u # Hoán đổi với cửa sổ phía trên
+bind = $mainMod ALT, down, swapwindow, d # Hoán đổi với cửa sổ phía dưới
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# Di chuyển focus bằng mainMod + phím mũi tên (Move focus)
+bind = $mainMod, left, movefocus, l # Focus sang cửa sổ bên trái
+bind = $mainMod, right, movefocus, r # Focus sang cửa sổ bên phải
+bind = $mainMod, up, movefocus, u # Focus sang cửa sổ phía trên
+bind = $mainMod, down, movefocus, d # Focus sang cửa sổ phía dưới
 
-# Workspaces related
-bind = $mainMod, tab, workspace, m+1
-bind = $mainMod SHIFT, tab, workspace, m-1
+# Liên quan đến Workspace (Workspaces related)
+bind = $mainMod, tab, workspace, m+1 # Chuyển sang workspace tiếp theo trên màn hình hiện tại
+bind = $mainMod SHIFT, tab, workspace, m-1 # Chuyển về workspace trước đó trên màn hình hiện tại
 
-# Special workspace
-bind = $mainMod SHIFT, U, movetoworkspace, special
-bind = $mainMod, U, togglespecialworkspace,
+# Workspace đặc biệt (Special workspace - workspace ẩn)
+bind = $mainMod SHIFT, U, movetoworkspace, special # Di chuyển cửa sổ vào workspace đặc biệt
+bind = $mainMod, U, togglespecialworkspace, # Bật/tắt hiển thị workspace đặc biệt
 
-# The following mappings use the key codes to better support various keyboard layouts
-# 1 is code:10, 2 is code 11, etc
-# Switch workspaces with mainMod + [0-9] 
-bind = $mainMod, code:10, workspace, 1 # NOTE: code:10 = key 1
-bind = $mainMod, code:11, workspace, 2 # NOTE: code:11 = key 2
-bind = $mainMod, code:12, workspace, 3 # NOTE: code:12 = key 3
-bind = $mainMod, code:13, workspace, 4 # NOTE: code:13 = key 4
-bind = $mainMod, code:14, workspace, 5 # NOTE: code:14 = key 5
-bind = $mainMod, code:15, workspace, 6 # NOTE: code:15 = key 6
-bind = $mainMod, code:16, workspace, 7 # NOTE: code:16 = key 7
-bind = $mainMod, code:17, workspace, 8 # NOTE: code:17 = key 8
-bind = $mainMod, code:18, workspace, 9 # NOTE: code:18 = key 9
-bind = $mainMod, code:19, workspace, 10 # NOTE: code:19 = key 0
-bind = $mainMod, bracketleft, workspace, -1 # brackets [
-bind = $mainMod, bracketright, workspace, +1 # brackets ]
+# Các ánh xạ sau sử dụng key code để hỗ trợ tốt hơn các bố cục bàn phím khác nhau
+# 1 là code:10, 2 là code:11, v.v.
+# Chuyển workspace bằng mainMod + [0-9]
+bind = $mainMod, code:10, workspace, 1 # LƯU Ý: code:10 = phím 1
+bind = $mainMod, code:11, workspace, 2 # LƯU Ý: code:11 = phím 2
+bind = $mainMod, code:12, workspace, 3 # LƯU Ý: code:12 = phím 3
+bind = $mainMod, code:13, workspace, 4 # LƯU Ý: code:13 = phím 4
+bind = $mainMod, code:14, workspace, 5 # LƯU Ý: code:14 = phím 5
+bind = $mainMod, code:15, workspace, 6 # LƯU Ý: code:15 = phím 6
+bind = $mainMod, code:16, workspace, 7 # LƯU Ý: code:16 = phím 7
+bind = $mainMod, code:17, workspace, 8 # LƯU Ý: code:17 = phím 8
+bind = $mainMod, code:18, workspace, 9 # LƯU Ý: code:18 = phím 9
+bind = $mainMod, code:19, workspace, 10 # LƯU Ý: code:19 = phím 0
+bind = $mainMod, bracketleft, workspace, -1 # Chuyển về workspace trước (dấu ngoặc [)
+bind = $mainMod, bracketright, workspace, +1 # Chuyển sang workspace tiếp theo (dấu ngoặc ])
 
-# Move active window and follow to workspace mainMod + SHIFT [0-9]
-bind = $mainMod SHIFT, code:10, movetoworkspace, 1 # NOTE: code:10 = key 1
-bind = $mainMod SHIFT, code:11, movetoworkspace, 2 # NOTE: code:11 = key 2
-bind = $mainMod SHIFT, code:12, movetoworkspace, 3 # NOTE: code:12 = key 3
-bind = $mainMod SHIFT, code:13, movetoworkspace, 4 # NOTE: code:13 = key 4
-bind = $mainMod SHIFT, code:14, movetoworkspace, 5 # NOTE: code:14 = key 5
-bind = $mainMod SHIFT, code:15, movetoworkspace, 6 # NOTE: code:15 = key 6
-bind = $mainMod SHIFT, code:16, movetoworkspace, 7 # NOTE: code:16 = key 7
-bind = $mainMod SHIFT, code:17, movetoworkspace, 8 # NOTE: code:17 = key 8
-bind = $mainMod SHIFT, code:18, movetoworkspace, 9 # NOTE: code:18 = key 9
-bind = $mainMod SHIFT, code:19, movetoworkspace, 10 # NOTE: code:19 = key 0
-bind = $mainMod SHIFT, bracketleft, movetoworkspace, -1 # brackets [
-bind = $mainMod SHIFT, bracketright, movetoworkspace, +1 # brackets ]
+# Di chuyển cửa sổ đang hoạt động và theo dõi đến workspace mainMod + SHIFT [0-9]
+bind = $mainMod SHIFT, code:10, movetoworkspace, 1 # LƯU Ý: code:10 = phím 1
+bind = $mainMod SHIFT, code:11, movetoworkspace, 2 # LƯU Ý: code:11 = phím 2
+bind = $mainMod SHIFT, code:12, movetoworkspace, 3 # LƯU Ý: code:12 = phím 3
+bind = $mainMod SHIFT, code:13, movetoworkspace, 4 # LƯU Ý: code:13 = phím 4
+bind = $mainMod SHIFT, code:14, movetoworkspace, 5 # LƯU Ý: code:14 = phím 5
+bind = $mainMod SHIFT, code:15, movetoworkspace, 6 # LƯU Ý: code:15 = phím 6
+bind = $mainMod SHIFT, code:16, movetoworkspace, 7 # LƯU Ý: code:16 = phím 7
+bind = $mainMod SHIFT, code:17, movetoworkspace, 8 # LƯU Ý: code:17 = phím 8
+bind = $mainMod SHIFT, code:18, movetoworkspace, 9 # LƯU Ý: code:18 = phím 9
+bind = $mainMod SHIFT, code:19, movetoworkspace, 10 # LƯU Ý: code:19 = phím 0
+bind = $mainMod SHIFT, bracketleft, movetoworkspace, -1 # Di chuyển cửa sổ về workspace trước (dấu ngoặc [)
+bind = $mainMod SHIFT, bracketright, movetoworkspace, +1 # Di chuyển cửa sổ sang workspace tiếp theo (dấu ngoặc ])
 
-# Move active window to a workspace silently mainMod + CTRL [0-9]
-bind = $mainMod CTRL, code:10, movetoworkspacesilent, 1 # NOTE: code:10 = key 1
-bind = $mainMod CTRL, code:11, movetoworkspacesilent, 2 # NOTE: code:11 = key 2
-bind = $mainMod CTRL, code:12, movetoworkspacesilent, 3 # NOTE: code:12 = key 3
-bind = $mainMod CTRL, code:13, movetoworkspacesilent, 4 # NOTE: code:13 = key 4
-bind = $mainMod CTRL, code:14, movetoworkspacesilent, 5 # NOTE: code:14 = key 5
-bind = $mainMod CTRL, code:15, movetoworkspacesilent, 6 # NOTE: code:15 = key 6
-bind = $mainMod CTRL, code:16, movetoworkspacesilent, 7 # NOTE: code:16 = key 7
-bind = $mainMod CTRL, code:17, movetoworkspacesilent, 8 # NOTE: code:17 = key 8
-bind = $mainMod CTRL, code:18, movetoworkspacesilent, 9 # NOTE: code:18 = key 9
-bind = $mainMod CTRL, code:19, movetoworkspacesilent, 10 # NOTE: code:19 = key 0
-bind = $mainMod CTRL, bracketleft, movetoworkspacesilent, -1 # brackets [
-bind = $mainMod CTRL, bracketright, movetoworkspacesilent, +1 # brackets ]
+# Di chuyển cửa sổ đang hoạt động đến workspace im lặng (không chuyển focus) mainMod + CTRL [0-9]
+bind = $mainMod CTRL, code:10, movetoworkspacesilent, 1 # LƯU Ý: code:10 = phím 1
+bind = $mainMod CTRL, code:11, movetoworkspacesilent, 2 # LƯU Ý: code:11 = phím 2
+bind = $mainMod CTRL, code:12, movetoworkspacesilent, 3 # LƯU Ý: code:12 = phím 3
+bind = $mainMod CTRL, code:13, movetoworkspacesilent, 4 # LƯU Ý: code:13 = phím 4
+bind = $mainMod CTRL, code:14, movetoworkspacesilent, 5 # LƯU Ý: code:14 = phím 5
+bind = $mainMod CTRL, code:15, movetoworkspacesilent, 6 # LƯU Ý: code:15 = phím 6
+bind = $mainMod CTRL, code:16, movetoworkspacesilent, 7 # LƯU Ý: code:16 = phím 7
+bind = $mainMod CTRL, code:17, movetoworkspacesilent, 8 # LƯU Ý: code:17 = phím 8
+bind = $mainMod CTRL, code:18, movetoworkspacesilent, 9 # LƯU Ý: code:18 = phím 9
+bind = $mainMod CTRL, code:19, movetoworkspacesilent, 10 # LƯU Ý: code:19 = phím 0
+bind = $mainMod CTRL, bracketleft, movetoworkspacesilent, -1 # Di chuyển im lặng về workspace trước (dấu ngoặc [)
+bind = $mainMod CTRL, bracketright, movetoworkspacesilent, +1 # Di chuyển im lặng sang workspace tiếp theo (dấu ngoặc ])
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-bind = $mainMod, period, workspace, e+1
-bind = $mainMod, comma, workspace, e-1
+# Cuộn qua các workspace hiện có bằng mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1 # Con lăn chuột xuống - workspace tiếp theo
+bind = $mainMod, mouse_up, workspace, e-1 # Con lăn chuột lên - workspace trước đó
+bind = $mainMod, period, workspace, e+1 # Phím dấu chấm - workspace tiếp theo
+bind = $mainMod, comma, workspace, e-1 # Phím dấu phẩy - workspace trước đó
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow # NOTE: mouse:272 = left click
-bindm = $mainMod, mouse:273, resizewindow # NOTE: mouse:272 = right click
+# Di chuyển/thay đổi kích thước cửa sổ bằng mainMod + LMB/RMB và kéo
+bindm = $mainMod, mouse:272, movewindow # LƯU Ý: mouse:272 = chuột trái - kéo để di chuyển cửa sổ
+bindm = $mainMod, mouse:273, resizewindow # LƯU Ý: mouse:273 = chuột phải - kéo để thay đổi kích thước cửa sổ
