--- a/hypr/configs/Keybinds.conf
+++ b/hypr/configs/Keybinds.conf
@@ -1,75 +1,154 @@
-# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
-# This is where you put your own keybinds. Be Mindful to check as well ~/.config/hypr/configs/Keybinds.conf to avoid conflict
-# if you think I should replace the Pre-defined Keybinds in ~/.config/hypr/configs/Keybinds.conf , submit an issue or let me know in DC and present me a valid reason as to why, such as conflicting with global shortcuts, etc etc
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more settings and variables
-# See also Laptops.conf for laptops keybinds 
+# /* ---- 💫 https://github.com/xuantruong1612 💫 ---- */  #
+# Default Keybinds
+# visit https://wiki.hyprland.org/Configuring/Binds/ for more info
+# --- Workspaces configuration by Xuan Truong ---
 
 # /* ---- ✴️ Variables ✴️ ---- */  #
 $mainMod = SUPER # Phím chính (phím Windows/Command)
 $scriptsDir = $HOME/.config/hypr/scripts # Thư mục chứa scripts
-$UserScripts = $HOME/.config/hypr/UserScripts # Thư mục scripts người dùng
 $UserConfigs = $HOME/.config/hypr/UserConfigs # Thư mục cấu hình người dùng
+$UserScripts = $HOME/.config/hypr/UserScripts # Thư mục scripts người dùng
 
-# Cài đặt cho ứng dụng mặc định của người dùng - đặt terminal và file manager mặc định trong file này
-source= $UserConfigs/01-UserDefaults.conf
+bind = CTRL ALT, Delete, exec, hyprctl dispatch exit 0 # thoát Hyprland
+#bind = $mainMod, Q, killactive, # đóng cửa sổ đang hoạt động (không kill)
+bind = $mainMod SHIFT, Q, exec, $scriptsDir/KillActiveProcess.sh # Kill tiến trình đang hoạt động
+bind = CTRL ALT, L, exec, $scriptsDir/LockScreen.sh # khóa màn hình
+bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh # menu nguồn
+bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # bảng thông báo swayNC
+bind = $mainMod SHIFT, E, exec, $scriptsDir/Kool_Quick_Settings.sh # Menu cài đặt KooL Hyprland
 
-# Phím tắt phổ biến (Common shortcuts)
-#bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window # Phím Super để mở menu rofi
-bind = $mainMod, D, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window # Menu chính (Trình khởi chạy ứng dụng)
-bind = $mainMod, B, exec, xdg-open "https://" # Trình duyệt mặc định
-#bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview' # Tổng quan desktop (nếu đã cài)
-bind = $mainMod, A, global, quickshell:overviewToggle # Tổng quan desktop (nếu đã cài quickshell)
-bind = $mainMod, Return, exec, $term # Mở terminal
-bind = $mainMod, E, exec, $files # Mở file manager
+bind = $mainMod, Q, exec, ~/.config/hypr/scripts/confirm_quit_terminal.sh # Xác nhận thoát terminal
 
-# TÍNH NĂNG / BỔ SUNG (FEATURES / EXTRAS)
-bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # Trợ giúp / Bảng gợi ý phím tắt
-bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Làm mới waybar, swaync, rofi
-bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # Menu emoji
-bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Tìm kiếm Google bằng rofi
-bind = $mainMod ALT, O, exec, $scriptsDir/ChangeBlur.sh # Bật/tắt hiệu ứng làm mờ
-bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # Bật/tắt animations (chế độ game)
-bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Chuyển đổi Layout Master hoặc Dwindle
-bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Quản lý clipboard
-bind = $mainMod CTRL, R, exec, $scriptsDir/RofiThemeSelector.sh # Menu chọn theme Rofi của KooL
-bind = $mainMod CTRL SHIFT, R, exec, pkill rofi || true && $scriptsDir/RofiThemeSelector-modified.sh # Menu chọn theme Rofi đã chỉnh sửa
+# Master Layout (Bố cục chính)
+bind = $mainMod CTRL, D, layoutmsg, removemaster # Xóa cửa sổ master
+bind = $mainMod, I, layoutmsg, addmaster # Thêm cửa sổ master
+bind = $mainMod, J, layoutmsg, cyclenext # Chu kỳ sang cửa sổ tiếp theo
+bind = $mainMod, K, layoutmsg, cycleprev # Chu kỳ về cửa sổ trước
+bind = $mainMod CTRL, Return, layoutmsg, swapwithmaster # Hoán đổi với cửa sổ master
 
-bind = $mainMod SHIFT, F, fullscreen # Toàn màn hình thực sự
-bind = $mainMod CTRL, F, fullscreen, 1 # Toàn màn hình giả
-bind = $mainMod, SPACE, togglefloating, # Chế độ cửa sổ nổi (Float Mode)
-bind = $mainMod ALT, SPACE, exec, hyprctl dispatch workspaceopt allfloat # Chế độ tất cả cửa sổ nổi
-bind = $mainMod SHIFT, Return, exec, $scriptsDir/Dropterminal.sh $term # Terminal thả xuống (Dropdown)
+# Dwindle Layout (Bố cục Dwindle)
+bind = $mainMod SHIFT, I, togglesplit # Bật/tắt chia cửa sổ (chỉ hoạt động trên dwindle layout)
+bind = $mainMod, P, pseudo, # Chế độ pseudo (dwindle)
 
-# Phóng to desktop hoặc kính lúp (Desktop zooming or magnifier)
-bind = $mainMod ALT, mouse_down, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor * 2.0}')" # Phóng to con trỏ
-bind = $mainMod ALT, mouse_up, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor / 2.0}')" # Thu nhỏ con trỏ
+# Hoạt động trên cả hai layout (Master hoặc Dwindle)
+bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3 # Đặt tỉ lệ chia cửa sổ 0.3
 
-## GHI CHÚ cho ja (Hyprland phiên bản 0.39 (Ubuntu 24.04))
-#bind = $mainMod ALT, mouse_down, exec, hyprctl keyword misc:cursor_zoom_factor "$(hyprctl getoption misc:cursor_zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor * 2.0}')"
-#bind = $mainMod ALT, mouse_up, exec, hyprctl keyword misc:cursor_zoom_factor "$(hyprctl getoption misc:cursor_zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor / 2.0}')" 
+# Nhóm cửa sổ (Window groups)
+bind = $mainMod, G, togglegroup # Bật/tắt nhóm cửa sổ
+bind = $mainMod CTRL, tab, changegroupactive # Chuyển focus sang cửa sổ khác trong nhóm
 
-# Waybar / Thanh trạng thái liên quan
-bind = $mainMod CTRL ALT, B, exec, pkill -SIGUSR1 waybar # Bật/tắt ẩn/hiện waybar
-bind = $mainMod CTRL, B, exec, $scriptsDir/WaybarStyles.sh # Menu chọn style Waybar
-bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Menu chọn layout Waybar
+# Chu kỳ cửa sổ, nếu floating thì đưa lên trên cùng
+bind = ALT, tab, cyclenext # Chuyển sang cửa sổ tiếp theo
+bind = ALT, tab, bringactivetotop # Đưa cửa sổ đang hoạt động lên trên cùng
 
-# TÍNH NĂNG / BỔ SUNG (UserScripts)
-bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # Nghe nhạc online bằng rofi
-bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Chọn hình nền để áp dụng
-bind = $mainMod SHIFT, W, exec, $UserScripts/WallpaperEffects.sh # Hiệu ứng hình nền bằng imagemagick
-bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Hình nền ngẫu nhiên
-bind = $mainMod CTRL, O, exec, hyprctl setprop active opaque toggle # Tắt/bật độ trong suốt trên cửa sổ đang hoạt động
-bind = $mainMod, K, exec, $scriptsDir/KeyBinds.sh # Tìm kiếm phím tắt qua rofi
-bind = $mainMod SHIFT, A, exec, $scriptsDir/Animations.sh # Menu animations của hyprland
-bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Thay đổi theme oh-my-zsh
-bindln = ALT_L, SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Thay đổi bố cục bàn phím toàn cục
-bindln = SHIFT_L, ALT_L, exec, $scriptsDir/Tak0-Per-Window-Switch.sh # Thay đổi bố cục bàn phím riêng cho từng cửa sổ
-bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # Máy tính (qalculate)
+# Phím đặc biệt / Phím nóng (Special Keys / Hot Keys)
+bindel = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc # Tăng âm lượng
+bindel = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec # Giảm âm lượng
+bindl = , xf86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic # Tắt/bật tiếng mic
+bindl = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle # Tắt/bật tiếng loa
+bindl = , xf86Sleep, exec, systemctl suspend # Nút ngủ (Sleep)
+bindl = , xf86Rfkill, exec, $scriptsDir/AirplaneMode.sh # Chế độ máy bay (Airplane mode)
 
-# Để passthrough bàn phím vào VM (For passthrough keyboard into a VM)
-# bind = $mainMod ALT, P, submap, passthru # Bật chế độ passthru
-#submap = passthru
-# để unbind
-#bind = $mainMod ALT, P, submap, reset # Tắt chế độ passthru
-#submap = reset
+# Điều khiển phương tiện bằng bàn phím (Media controls)
+bindl = , xf86AudioPlayPause, exec, $scriptsDir/MediaCtrl.sh --pause # Phát/Tạm dừng nhạc
+bindl = , xf86AudioPause, exec, $scriptsDir/MediaCtrl.sh --pause # Tạm dừng nhạc
+bindl = , xf86AudioPlay, exec, $scriptsDir/MediaCtrl.sh --pause # Phát nhạc
+bindl = , xf86AudioNext, exec, $scriptsDir/MediaCtrl.sh --nxt # Bài hát tiếp theo
+bindl = , xf86AudioPrev, exec, $scriptsDir/MediaCtrl.sh --prv # Bài hát trước đó
+bindl = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop # Dừng phát nhạc
+
+# Phím tắt chụp màn hình (Screenshot keybindings) - LƯU Ý: Có thể cần nhấn phím Fn
+bind = $mainMod CTRL, S, exec, $scriptsDir/ScreenShot.sh --now # Chụp màn hình ngay lập tức
+#bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area # Chụp màn hình vùng chọn
+bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 # Chụp màn hình sau 5 giây
+bind = $mainMod CTRL SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --in10 # Chụp màn hình sau 10 giây
+bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active # Chụp màn hình cửa sổ đang hoạt động
+
+# Chụp màn hình với swappy (công cụ chụp màn hình có chỉnh sửa)
+bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --area # Chụp màn hình vùng chọn 
+
+# Thay đổi kích thước cửa sổ (Resize windows)
+binde = $mainMod SHIFT, left, resizeactive,-50 0 # Thu nhỏ chiều ngang
+binde = $mainMod SHIFT, right, resizeactive,50 0 # Mở rộng chiều ngang
+binde = $mainMod SHIFT, up, resizeactive,0 -50 # Thu nhỏ chiều dọc
+binde = $mainMod SHIFT, down, resizeactive,0 50 # Mở rộng chiều dọc
+
+# Di chuyển cửa sổ (Move windows)
+bind = $mainMod CTRL, left, movewindow, l # Di chuyển cửa sổ sang trái
+bind = $mainMod CTRL, right, movewindow, r # Di chuyển cửa sổ sang phải
+bind = $mainMod CTRL, up, movewindow, u # Di chuyển cửa sổ lên trên
+bind = $mainMod CTRL, down, movewindow, d # Di chuyển cửa sổ xuống dưới
+
+# Hoán đổi vị trí cửa sổ (Swap windows)
+bind = $mainMod ALT, left, swapwindow, l # Hoán đổi với cửa sổ bên trái
+bind = $mainMod ALT, right, swapwindow, r # Hoán đổi với cửa sổ bên phải
+bind = $mainMod ALT, up, swapwindow, u # Hoán đổi với cửa sổ phía trên
+bind = $mainMod ALT, down, swapwindow, d # Hoán đổi với cửa sổ phía dưới
+
+# Di chuyển focus bằng mainMod + phím mũi tên (Move focus)
+bind = $mainMod SHIFT , h, movefocus, l # Focus sang cửa sổ bên trái
+bind = $mainMod SHIFT, l, movefocus, r # Focus sang cửa sổ bên phải
+bind = $mainMod SHIFT, k, movefocus, u # Focus sang cửa sổ phía trên
+bind = $mainMod SHIFT, j, movefocus, d # Focus sang cửa sổ phía dưới
+
+# Liên quan đến Workspace (Workspaces related)
+bind = $mainMod, tab, workspace, m+1 # Chuyển sang workspace tiếp theo trên màn hình hiện tại
+bind = $mainMod SHIFT, tab, workspace, m-1 # Chuyển về workspace trước đó trên màn hình hiện tại
+
+# Workspace đặc biệt (Special workspace - workspace ẩn)
+bind = $mainMod SHIFT, U, movetoworkspace, special # Di chuyển cửa sổ vào workspace đặc biệt
+bind = $mainMod, U, togglespecialworkspace, # Bật/tắt hiển thị workspace đặc biệt
+
+# Các ánh xạ sau sử dụng key code để hỗ trợ tốt hơn các bố cục bàn phím khác nhau
+# 1 là code:10, 2 là code:11, v.v.
+# Chuyển workspace bằng mainMod + [0-9]
+bind = $mainMod, code:10, workspace, 1 # LƯU Ý: code:10 = phím 1
+bind = $mainMod, code:11, workspace, 2 # LƯU Ý: code:11 = phím 2
+bind = $mainMod, code:12, workspace, 3 # LƯU Ý: code:12 = phím 3
+bind = $mainMod, code:13, workspace, 4 # LƯU Ý: code:13 = phím 4
+bind = $mainMod, code:14, workspace, 5 # LƯU Ý: code:14 = phím 5
+bind = $mainMod, code:15, workspace, 6 # LƯU Ý: code:15 = phím 6
+bind = $mainMod, code:16, workspace, 7 # LƯU Ý: code:16 = phím 7
+bind = $mainMod, code:17, workspace, 8 # LƯU Ý: code:17 = phím 8
+bind = $mainMod, code:18, workspace, 9 # LƯU Ý: code:18 = phím 9
+bind = $mainMod, code:19, workspace, 10 # LƯU Ý: code:19 = phím 0
+bind = $mainMod, bracketleft, workspace, -1 # Chuyển về workspace trước (dấu ngoặc [)
+bind = $mainMod, bracketright, workspace, +1 # Chuyển sang workspace tiếp theo (dấu ngoặc ])
+
+# Di chuyển cửa sổ đang hoạt động và theo dõi đến workspace mainMod + SHIFT [0-9]
+bind = $mainMod SHIFT, code:10, movetoworkspace, 1 # LƯU Ý: code:10 = phím 1
+bind = $mainMod SHIFT, code:11, movetoworkspace, 2 # LƯU Ý: code:11 = phím 2
+bind = $mainMod SHIFT, code:12, movetoworkspace, 3 # LƯU Ý: code:12 = phím 3
+bind = $mainMod SHIFT, code:13, movetoworkspace, 4 # LƯU Ý: code:13 = phím 4
+bind = $mainMod SHIFT, code:14, movetoworkspace, 5 # LƯU Ý: code:14 = phím 5
+bind = $mainMod SHIFT, code:15, movetoworkspace, 6 # LƯU Ý: code:15 = phím 6
+bind = $mainMod SHIFT, code:16, movetoworkspace, 7 # LƯU Ý: code:16 = phím 7
+bind = $mainMod SHIFT, code:17, movetoworkspace, 8 # LƯU Ý: code:17 = phím 8
+bind = $mainMod SHIFT, code:18, movetoworkspace, 9 # LƯU Ý: code:18 = phím 9
+bind = $mainMod SHIFT, code:19, movetoworkspace, 10 # LƯU Ý: code:19 = phím 0
+bind = $mainMod SHIFT, bracketleft, movetoworkspace, -1 # Di chuyển cửa sổ về workspace trước (dấu ngoặc [)
+bind = $mainMod SHIFT, bracketright, movetoworkspace, +1 # Di chuyển cửa sổ sang workspace tiếp theo (dấu ngoặc ])
+
+# Di chuyển cửa sổ đang hoạt động đến workspace im lặng (không chuyển focus) mainMod + CTRL [0-9]
+bind = $mainMod CTRL, code:10, movetoworkspacesilent, 1 # LƯU Ý: code:10 = phím 1
+bind = $mainMod CTRL, code:11, movetoworkspacesilent, 2 # LƯU Ý: code:11 = phím 2
+bind = $mainMod CTRL, code:12, movetoworkspacesilent, 3 # LƯU Ý: code:12 = phím 3
+bind = $mainMod CTRL, code:13, movetoworkspacesilent, 4 # LƯU Ý: code:13 = phím 4
+bind = $mainMod CTRL, code:14, movetoworkspacesilent, 5 # LƯU Ý: code:14 = phím 5
+bind = $mainMod CTRL, code:15, movetoworkspacesilent, 6 # LƯU Ý: code:15 = phím 6
+bind = $mainMod CTRL, code:16, movetoworkspacesilent, 7 # LƯU Ý: code:16 = phím 7
+bind = $mainMod CTRL, code:17, movetoworkspacesilent, 8 # LƯU Ý: code:17 = phím 8
+bind = $mainMod CTRL, code:18, movetoworkspacesilent, 9 # LƯU Ý: code:18 = phím 9
+bind = $mainMod CTRL, code:19, movetoworkspacesilent, 10 # LƯU Ý: code:19 = phím 0
+bind = $mainMod CTRL, bracketleft, movetoworkspacesilent, -1 # Di chuyển im lặng về workspace trước (dấu ngoặc [)
+bind = $mainMod CTRL, bracketright, movetoworkspacesilent, +1 # Di chuyển im lặng sang workspace tiếp theo (dấu ngoặc ])
+
+# Cuộn qua các workspace hiện có bằng mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1 # Con lăn chuột xuống - workspace tiếp theo
+bind = $mainMod, mouse_up, workspace, e-1 # Con lăn chuột lên - workspace trước đó
+bind = $mainMod, period, workspace, e+1 # Phím dấu chấm - workspace tiếp theo
+bind = $mainMod, comma, workspace, e-1 # Phím dấu phẩy - workspace trước đó
+
+# Di chuyển/thay đổi kích thước cửa sổ bằng mainMod + LMB/RMB và kéo
+bindm = $mainMod, mouse:272, movewindow # LƯU Ý: mouse:272 = chuột trái - kéo để di chuyển cửa sổ
+bindm = $mainMod, mouse:273, resizewindow # LƯU Ý: mouse:273 = chuột phải - kéo để thay đổi kích thước cửa sổ
