--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,7 +1,8 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # Hypridle 
 # Original config submitted by https://github.com/SherLock707                                                       
-                                                      
+# --- Workspaces configuration by Xuan Truong ---
+
 $iDIR="$HOME/.config/swaync/images/ja.png"
 
 general {
@@ -31,7 +32,7 @@ listener {
 listener {
     timeout = 600                     # 10 min
     on-timeout = loginctl lock-session # command to run when timeout has passed
-    #on-resume = notify-send -i $iDIR " System Unlocked!"  # command to run when activity is detected after timeout has fired.
+    on-resume = notify-send -i $iDIR " System Unlocked!"  # command to run when activity is detected after timeout has fired.
 }
 
 # Turn off screen 
@@ -43,8 +44,16 @@ listener {
 # }
 
 # Suspend # disabled by default
-# listener {
+listener {
    # timeout = 1200                            # 20 min
-   # on-timeout = systemctl suspend # command to run when timeout has passed
+   timeout = 900 # 15 min
+   on-timeout = systemctl suspend # command to run when timeout has passed
     # on-resume = notify-send -i $iDIR " Oh! you're back" "Hello !!!"  # command to run when activity is detected after timeout has fired.
 # }
+
+# Power off the system after 30 minutes of inactivity
+listener {
+    timeout = 1800                         # 30 phút
+    on-timeout = systemctl poweroff        # lệnh tắt máy
+    # on-resume = notify-send -i $iDIR "⚡ Canceled Poweroff" "You are back in time!"  # thông báo khi có hoạt động trở lại
+}
