--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,7 +1,7 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # Hypridle 
 # Original config submitted by https://github.com/SherLock707                                                       
-# --- Workspaces configuration by Xuan Truong ---
+# --- Workspaces configuration by Xuan Truong ---     
 
 $iDIR="$HOME/.config/swaync/images/ja.png"
 
@@ -25,14 +25,14 @@ general {
 listener {
     timeout = 540                     # 9 min
     on-timeout = notify-send -i $iDIR " You are idle!" # command to run when timeout has passed
-    on-resume = notify-send -i $iDIR " Oh! you're Back" " Hello !!!"  # command to run when activity is detected after timeout has fired.
+    on-resume = notify-send -i $iDIR " I know exactly where you are!"  # command to run when activity is detected after timeout has fired.
 }
 
 # Screenlock
 listener {
     timeout = 600                     # 10 min
     on-timeout = loginctl lock-session # command to run when timeout has passed
-    on-resume = notify-send -i $iDIR " System Unlocked!"  # command to run when activity is detected after timeout has fired.
+    on-resume = notify-send -i $iDIR " I know exactly where you are!"  # command to run when activity is detected after timeout has fired.
 }
 
 # Turn off screen 
@@ -53,7 +53,7 @@ listener {
 
 # Power off the system after 30 minutes of inactivity
 listener {
-    timeout = 1800                         # 30 phút
+    timeout = 3000                         # 50 phút
     on-timeout = systemctl poweroff        # lệnh tắt máy
     # on-resume = notify-send -i $iDIR "⚡ Canceled Poweroff" "You are back in time!"  # thông báo khi có hoạt động trở lại
 }
