--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -13,7 +13,8 @@ windowrule = tag +browser, class:^([Ff]irefox|org.mozilla.firefox|[Ff]irefox-esr
 windowrule = tag +browser, class:^([Gg]oogle-chrome(-beta|-dev|-unstable)?)$
 windowrule = tag +browser, class:^(chrome-.+-Default)$ # Chrome PWAs
 windowrule = tag +browser, class:^([Cc]hromium)$
-windowrule = tag +browser, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable))$
+#windowrule = tag +browser, class:^([Mm]icrosoft-edge(-stable|-beta|-dev|-unstable))$
+windowrule = tag +browser, class:^(?i)microsoft-edge(-stable|-beta|-dev|-unstable)?$
 windowrule = tag +browser, class:^(Brave-browser(-beta|-dev|-unstable)?)$
 windowrule = tag +browser, class:^([Tt]horium-browser|[Cc]achy-browser)$
 windowrule = tag +browser, class:^(zen-alpha|zen)$
@@ -91,6 +92,9 @@ windowrule = tag +viewer, class:^(gnome-system-monitor|org.gnome.SystemMonitor|i
 windowrule = tag +viewer, class:^(evince)$ # document viewer 
 windowrule = tag +viewer, class:^(eog|org.gnome.Loupe)$ # image viewer
 
+# music
+windowrule = tag +music, class:^(?i)(spotify|com.spotify.Client)$
+
 # Some special override rules
 windowrule = noblur, tag:multimedia_video*
 windowrule = opacity 1.0, tag:multimedia_video*
@@ -118,10 +122,10 @@ windowrule = workspace 1, tag:browser*
 windowrule = workspace 2, tag:email*
 #windowrule = workspace 3, class:^([Tt]hunar)$
 #windowrule = workspace 3, tag:projects*
+windowrule = workspace 3, tag:music*
 windowrule = workspace 5, tag:gamestore*
 windowrule = workspace 7, tag:im*
 windowrule = workspace 8, tag:games*
-
 # windowrule move to workspace (silent)
 windowrule = workspace 4 silent, tag:screenshare*
 windowrule = workspace 6 silent, class:^(virt-manager)$
@@ -165,6 +169,12 @@ windowrule = size 70% 60%, initialTitle:(Open Files)
 windowrule = float, title:^(SDDM Background)$ #KooL's Dots YAD for setting SDDM background
 windowrule = center, title:^(SDDM Background)$ #KooL's Dots YAD for setting SDDM background
 windowrule = size 16% 12%, title:^(SDDM Background)$ #KooL's Dots YAD for setting SDDM background
+
+windowrule = float, tag:music*
+windowrule = size 50% 50%, tag:music*
+windowrule = noborder, tag:music*
+windowrule = fullscreenstate 0 0, tag:music*
+
 # END of float popups and dialogue #######
 
 # OPACITY
@@ -181,6 +191,7 @@ windowrule = opacity 0.8 0.7, class:^(gedit|org.gnome.TextEditor|mousepad)$
 windowrule = opacity 0.9 0.8, class:^(deluge)$
 windowrule = opacity 0.9 0.8, class:^(seahorse)$ # gnome-keyring gui
 windowrule = opacity 0.95 0.75, title:^(Picture-in-Picture)$
+windowrule = opacity 0.94 0.86, tag:music*
 
 # SIZE
 windowrule = size 65% 90%, tag:KooL_Cheat*
