--- a/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/UserConfigs/Startup_Apps.conf
@@ -8,11 +8,11 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 $wallDIR=$HOME/Pictures/wallpapers
 $lock = $scriptsDir/LockScreen.sh
 $SwwwRandom = $UserScripts/WallpaperAutoChange.sh
-$livewallpaper="$HOME/Pictures/wallpapers/Jinx-Arcane-1080p.mp4"
+$livewallpaper="$HOME/Pictures/wallpapers/dark-knight-frostbound.1920x1080.mp4"
 
 # wallpaper stuff 
 exec-once = swww-daemon --format xrgb # hình nền thường thì cmt line 47
-exec-once = mpvpaper '*' -o "load-scripts=no no-audio --loop" $livewallpaper
+#exec-once = mpvpaper '*' -o "load-scripts=no no-audio --loop" $livewallpaper
 
 # wallpaper random
 #exec-once = $SwwwRandom $wallDIR # random wallpaper switcher every 30 minutes
@@ -38,11 +38,13 @@ exec-once = CLIPHIST_MAX_ITEMS=5000 wl-paste --type text --watch cliphist store
 exec-once = CLIPHIST_MAX_ITEMS=100 wl-paste --type image --watch cliphist store
 
 # Rainbow borders
-#exec-once = $UserScripts/RainbowBorders.sh
+exec-once = $UserScripts/RainbowBorders.sh
 
 # Starting hypridle to start hyprlock
 exec-once = hypridle
 
+# Network auto-switcher
+exec-once = bash $HOME/.config/hypr/scripts/network-switcher.sh &
 
 # Here are list of features available but disabled by default
 #exec-once = swww-daemon --format xrgb && swww img $HOME/Pictures/wallpapers/MangaWallpaperGIF.gif  # persistent wallpaper
