--- a/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/UserConfigs/Startup_Apps.conf
@@ -44,7 +44,7 @@ exec-once = $UserScripts/RainbowBorders.sh
 exec-once = hypridle
 
 # Network auto-switcher
-exec-once = bash $HOME/.config/hypr/scripts/network-switcher.sh &
+exec-once = bash $scriptsDir/network-switcher.sh &
 
 # Here are list of features available but disabled by default
 #exec-once = swww-daemon --format xrgb && swww img $HOME/Pictures/wallpapers/MangaWallpaperGIF.gif  # persistent wallpaper
