Update Startup_Apps.conf for script paths and comments

--- a/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/UserConfigs/Startup_Apps.conf
@@ -38,13 +38,15 @@ exec-once = CLIPHIST_MAX_ITEMS=5000 wl-paste --type text --watch cliphist store
 exec-once = CLIPHIST_MAX_ITEMS=100 wl-paste --type image --watch cliphist store
 
 # Rainbow borders
-exec-once = $UserScripts/RainbowBorders.sh
+# exec-once = $UserScripts/RainbowBorders.sh
 
 # Starting hypridle to start hyprlock
 exec-once = hypridle
 
 # Network auto-switcher
-exec-once = bash $scriptsDir/network-switcher.sh &
+exec-once = bash $HOME/.config/hypr/scripts/network-switcher.sh &
+
+exec-once = ~/.config/hypr/scripts/Battery.sh
 
 # Here are list of features available but disabled by default
 #exec-once = swww-daemon --format xrgb && swww img $HOME/Pictures/wallpapers/MangaWallpaperGIF.gif  # persistent wallpaper
