Fix keybinding for clipboard manager

--- a/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/UserConfigs/UserKeybinds.conf
@@ -31,7 +31,7 @@ bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Tìm kiếm Google bằng 
 bind = $mainMod ALT, O, exec, $scriptsDir/ChangeBlur.sh # Bật/tắt hiệu ứng làm mờ
 bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # Bật/tắt animations (chế độ game)
 bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Chuyển đổi Layout Master hoặc Dwindle
-bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Quản lý clipboard
+bind = $mainMod, V, exec, $scriptsDir/ClipManager.sh # Quản lý clipboard
 bind = $mainMod CTRL, R, exec, $scriptsDir/RofiThemeSelector.sh # Menu chọn theme Rofi của KooL
 bind = $mainMod CTRL SHIFT, R, exec, pkill rofi || true && $scriptsDir/RofiThemeSelector-modified.sh # Menu chọn theme Rofi đã chỉnh sửa
 
