--- a/hypr/UserConfigs/UserKeybinds.conf
+++ b/hypr/UserConfigs/UserKeybinds.conf
@@ -66,6 +66,7 @@ bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Thay đổi the
 bindln = ALT_L, SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Thay đổi bố cục bàn phím toàn cục
 bindln = SHIFT_L, ALT_L, exec, $scriptsDir/Tak0-Per-Window-Switch.sh # Thay đổi bố cục bàn phím riêng cho từng cửa sổ
 bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # Máy tính (qalculate)
+bind = $mainMod, N, exec, $UserScripts/Quick-note.sh
 
 # Để passthrough bàn phím vào VM (For passthrough keyboard into a VM)
 # bind = $mainMod ALT, P, submap, passthru # Bật chế độ passthru
