--- a/hypr/UserConfigs/Startup_Apps.conf
+++ b/hypr/UserConfigs/Startup_Apps.conf
@@ -44,9 +44,10 @@ exec-once = CLIPHIST_MAX_ITEMS=100 wl-paste --type image --watch cliphist store
 exec-once = hypridle
 
 # Network auto-switcher
-exec-once = bash $HOME/.config/hypr/scripts/network-switcher.sh &
+exec-once = $UserScripts/Network-switcher.sh
 
-exec-once = ~/.config/hypr/scripts/Battery.sh
+# Battery
+exec-once = $scriptsDir/Battery.sh
 
 # Here are list of features available but disabled by default
 #exec-once = swww-daemon --format xrgb && swww img $HOME/Pictures/wallpapers/MangaWallpaperGIF.gif  # persistent wallpaper
